src/snapshots/tuipe__ui__tests__statistics_history_50x14.snap
---
source: src/ui.rs
expression: compact_history
---
  ╭─────────────╮ ╭────────────╮ ╭─────────────╮
  │   1 visão  │ │ 2 progress│ │ 3 histórico│
  ╰─────────────╯ ╰────────────╯ ╰─────────────╯
  histórico de sessões  ·  filtro: todos
  sessão     resultado    wpm   acc   tempo
  › #42     concluído     92    98%   15.0s
    #41     falhou        61    86%    4.2s





  ──────────────────────────────────────────────
  ↑↓ mover  enter abrir  f filtro  esc voltar
