src/snapshots/tuipe__ui__tests__statistics_progress_100x28.snap
---
source: src/ui.rs
expression: progress
---
     estatísticas  1 visão geral  2 progresso  3 histórico  ·  nível 0  ·  sequência 0 dias
     tendência de wpm  ·  12 testes válidos
      100│
         │               ⢀       ⡀   ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣠⣀⣀⣀⣀⣀⣀⣀⣄⣀⣀⣀⣀⣀⣀⣀⣄⣀⣀⣀⣀⣀⣀⣠⣀⣀⣀⡠⠤⠤⠤⠦⠤⠤⠤⠤⠤⠤⠤⠦⠤⠤⠤⠤⠤⠤⠴
         │⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉
       50│
         │
         │
         │
        0└─────────────────────────────────────────────────────────────────────────────────────
         #1                                        #7                                       #12
     testes totais  testes válidos  wpm médio      precisão       melhor          tempo ativo
     42             12              84             96%            112             1h 01m

     distribuição de wpm                            atividade diária  ·  últimos 14 dias
      60–80  █████████████ 3                        09/07  █████   1 teste   0.5 min
      80–100 █████████████████████████████ 7        10/07  █████████   2 testes   1.0 min
     100–120 █████████ 2                            11/07  █████████████   3 testes   1.5 min
                                                    12/07  ·   0 testes   0.0 min
                                                    13/07  █████   1 teste   0.5 min
                                                    14/07  █████████   2 testes   1.0 min
                                                    15/07  █████████████   3 testes   1.5 min
                                                    16/07  ·   0 testes   0.0 min
                                                    17/07  █████   1 teste   0.5 min
                                                    18/07  █████████   2 testes   1.0 min
                                                    19/07  █████████████   3 testes   1.5 min
                                                    20/07  ·   0 testes   0.0 min
     tab ou 1–3 navegar   esc voltar
