src/snapshots/tuipe__ui__tests__statistics_progress_50x14.snap
---
source: src/ui.rs
expression: compact_progress
---
  1 visão  2 progresso  3 histórico
  84 wpm médio  ·  96% precisão
  12 testes iguais  ·  melhor 112  ·  1h 01m ati

  distribuição de wpm
   60–80  ██████████████ 3
   80–100 ████████████████████████████████ 7
  100–120 ██████████ 2

  atividade  ·  últimos 14 dias
  10 dias ativos  ·  21 testes  ·  10m


  tab navegar   esc voltar
