src/snapshots/tuipe__ui__tests__statistics_word_50x14.snap
---
source: src/ui.rs
expression: rendered
---
  palavra  através
  chance na próxima sessão: 7% → 25%
  falhou 3/12  ·  corrigiu 2/12  ·  5 caracteres
  ritmo 120 ms/caractere  ·  +33% vs base
  tendência ainda incerta
  última prática há 2 h

  tentativas recentes
  #42    falhou · 140 ms/caractere
  #41    corrigiu 2 · 240 ms


  ──────────────────────────────────────────────
  r zerar palavra   enter ou esc voltar
