src/snapshots/tuipe__ui__tests__test_100x28.snap
---
source: src/ui.rs
expression: rendered
---


     ⌨ tuipe


        ╭──────────────────────────╮  ╭──────────────────────────╮  ╭──────────────────────╮
        │ @ punctuation  # numbers │  │ ◷ time  A words  ❝ quote │  │  15   30   60   120  │
        ╰──────────────────────────╯  ╰──────────────────────────╯  ╰──────────────────────╯


                                portuguese common · expert · adaptive

     olá  mundo  prática













                               enter restart    esc settings    q quit
