src/snapshots/tuipe__ui__tests__test_180x40.snap
---
source: src/ui.rs
expression: rendered
---


          ⌨ tuipe


                                                 ╭────────────────────────╮  ╭─────────────────────────────╮  ╭──────────────────╮
                                                 │  @ pontuação # números │  │◷ tempo Aa palavras ❝ citação│  │  15  30  60  120 │
                                                 ╰────────────────────────╯  ╰─────────────────────────────╯  ╰──────────────────╯







                                                                            🌐  português · ★ especialista

          olá mundo prática




















                                                                      esc configurações    ctrl+s estatísticas
