src/snapshots/tuipe__ui__tests__test_50x14.snap
---
source: src/ui.rs
expression: rendered
---


  ⌨ tuipe

              ╭───────────────────╮
              │ ⚙  test settings  │
       portuguese common · expert · adaptive

  olá  mundo  prática



      enter restart    esc settings    q quit
