src/snapshots/tuipe__ui__tests__test_failed_100x28.snap
---
source: src/ui.rs
expression: "render_engine_at(100, 28, &engine)"
---




     wpm ao longo do tempo   × erros
      120│⠉⠉⠉⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⢄⣀⣀⣀⣀⣀
         │                   ⠉⠉⠉⠉⠉⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠢⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⡀
         │                                             ⠈⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠤⠤⠤⠤⠤⣀⣀⣀⣀⣀⡀
         │                                                                  ⠈⠉⠉⠉⠉⠑⠒⠒⠒⠒⠒⠤⠤⠤⠤⠤⠤⠤×
       60│
         │
         │
         │
         │
        0└─────────────────────────────────────────────────────────────────────────────────────
         1                                                                                  1.7

     tipo de teste     wpm       precisão     bruto     caracteres     consistência    tempo
     palavras 4        71        92%          92        10/1/0/1       46%             1.7s
     ◎ português
     ★ especialista





                                    ›        ↻        ⌁        ×
                       enter próximo    r repetir    s estatísticas    q sair
