src/snapshots/tuipe__ui__tests__test_failed_180x40.snap
---
source: src/ui.rs
expression: "render_engine_at(180, 40, &engine)"
---












         wpm             80│
         61                │⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠔⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠊⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉•
                           │
         acc               │
         96%             0 │
                           └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                           1                                                                                                                                            4.1

         test type                             other                                raw              characters                 consistency                time
         words 6                               failed (difficulty)                  70               21/1/0/1                   72%                        4.1s
         portuguese common
         expert · adaptive














                                                               enter next    r repeat    h words    s stats    q quit
