src/snapshots/tuipe__ui__tests__test_failed_70x50.snap
---
source: src/ui.rs
expression: "render_engine_at(70, 50, &engine)"
---












   wpm               wpm ao longo do tempo   × erros
   █▀█ ▗█             120│⠉⠑⠒⠒⠤⠤⢄⣀⣀
    ▗▛  █                │         ⠉⠉⠑⠒⠒⠒⠒⠢⠤⠤⢄⣀⣀
    █   █                │                      ⠉⠉⠑⠒⠒⠤⠤⢄⣀⣀
    ▀  ▀▀▀               │                                ⠉⠉⠑⠒⠒⠤⠤⠤×
   precisão            60│
   ▟▀▙ ▟▀▙ ▄ ▗▖          │
   ▜▄█  ▄▛ ▀▗▛           │
    ▗▛ ▟▘▄ ▗▛▗▖          │
   ▝▀  ▀▀▀ ▀ ▝▘          │
                        0└─────────────────────────────────────────
                         1                                      1.7

   tipo de teste         outro                 bruto
   palavras 4            falhou (dificuldade)  92
   ◎ português comum
   ★ especialista

   caracteres            consistência          tempo
   10/1/0/1              46%                   1.7s
















   enter próximo    r repetir    h palavras    s estatísticas    q
